--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -1,8 +1,60 @@
+@import "./common";
+
 $cover-size: 40px;
 .Home {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
   width: 100%;
   height: 100vh;
+  padding: 15px;
   background: #191919;
+  .upperPart {
+    display: flex;
+    flex: 1;
+    margin-bottom: 15px;
+    overflow: hidden;
+    .MainPart {
+      flex: 1;
+      box-sizing: border-box;
+      overflow: scroll;
+      border-radius: $primary-radius;
+      .infoBox {
+        position: relative;
+        box-sizing: border-box;
+        height: 300px;
+
+        // padding: 20px;
+        .infoBoxBackground {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          background: linear-gradient($primary, rgb(0 0 0 / 0%));
+          opacity: 0.5;
+        }
+        .infoBoxContent {
+          padding: 20px;
+          .headerBar {
+            margin-bottom: 20px;
+          }
+          .coverContent {
+            display: flex;
+            .theCover {
+              display: flex;
+              width: 200px;
+              height: 200px;
+              margin-right: 30px;
+              object-fit: cover;
+              border-radius: 20px;
+            }
+          }
+        }
+      }
+    }
+  }
+  .lowerPart {
+    height: 80px;
+  }
 }
 .TrackListBox {
   display: flex;
@@ -15,7 +67,7 @@ $cover-size: 40px;
   border-radius: 6px;
   cursor: pointer;
   &:hover {
-    background: #2d2d2d;
+    background: $hover;
   }
   .cover {
     flex-shrink: 0;
