--- a/src/pages/home/ActiveTrack.module.scss
+++ b/src/pages/home/ActiveTrack.module.scss
@@ -7,4 +7,66 @@
   padding: 15px;
   background: $hover;
   border-radius: $primary-radius;
+  .playBtn {
+    display: flex;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+    color: white;
+    line-height: 50px;
+    text-align: center;
+    background: #3c3c3c;
+    border-radius: 100%;
+    cursor: pointer;
+  }
+}
+.TrackInfo {
+  flex-shrink: 1;
+  width: 200px;
+  margin-right: 10px;
+  padding-top: 4px;
+  .trackTitle {
+    overflow: hidden;
+    color: white;
+    font-weight: bold;
+    font-size: 14px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+  .trackArtists {
+    overflow: hidden;
+    color: #a7a7a7;
+    font-size: 12px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+}
+.ProgressBar {
+  position: relative;
+  top: 23px;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background: #505050;
+  border-radius: 2px;
+  cursor: pointer;
+}
+.SegmentBar {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: #505050;
+  .shortBar {
+    position: absolute;
+    top: -4px;
+    left: -2px;
+    width: 4px;
+    height: 10px;
+    background: white;
+    border-radius: 2px;
+    cursor: pointer;
+  }
 }
