--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -35,7 +35,19 @@ $cover-size: 40px;
         .infoBoxContent {
           padding: 20px;
           .headerBar {
-            margin-bottom: 20px;
+            position: relative;
+            height: 20px;
+            margin-bottom: 30px;
+            .avatar {
+              position: absolute;
+              top: 0;
+              right: 0;
+              display: block;
+              width: 20px;
+              height: 20px;
+              object-fit: cover;
+              border-radius: 10px;
+            }
           }
           .coverContent {
             display: flex;
@@ -99,7 +111,7 @@ $cover-size: 40px;
   .title {
     flex-grow: 0;
     width: 30%;
-    padding-right: 10px;
+    padding-right: 12px;
     overflow: hidden;
     line-height: $cover-size;
     white-space: nowrap;
@@ -108,7 +120,7 @@ $cover-size: 40px;
   .artists {
     flex-grow: 0;
     width: 30%;
-    padding-right: 10px;
+    padding-right: 12px;
     overflow: hidden;
     line-height: $cover-size;
     white-space: nowrap;
@@ -116,7 +128,7 @@ $cover-size: 40px;
   }
   .album {
     width: 30%;
-    padding-right: 10px;
+    padding-right: 12px;
     overflow: hidden;
     line-height: $cover-size;
     white-space: nowrap;
@@ -124,7 +136,7 @@ $cover-size: 40px;
   }
   .time {
     width: 15%;
-    padding-right: 10px;
+    padding-right: 12px;
     overflow: hidden;
     line-height: $cover-size;
     white-space: nowrap;
