--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -78,7 +78,7 @@ $cover-size: 40px;
     font-size: 12px;
     background: #191919;
     border-bottom: 1px solid #565656;
-    border-radius: 6px;
+    border-radius: 0;
   }
   .trackListBody {
     display: flex;
